<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_activity"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/profile" />
    <item
        android:id="@+id/map_activity"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />
    <item
        android:id="@+id/feed_activity"
        android:icon="@drawable/ic_outline_forum_24"
        android:title="@string/feed" />

</menu>